environments/sandbox-narrative/kubernetes/prometheus/prometheus/prometheus-service.yml
---
  kind: Service
  apiVersion: v1
  metadata:
    annotations:
      prometheus.io/probe: "true"
    name: prometheus
    namespace: monitoring
  spec:
    selector:
      app: prometheus
    ports:
      - protocol: TCP
        port: 9090
        targetPort: 9090
        name: prometheus
