environments/sandbox-narrative/kubernetes/prometheus/prometheus/sandbox-prometheus-federation-narrative-cloud-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: narrative-prometheus-federation
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required."
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "monitoring"
  name: sandbox-prometheus-federation
  namespace: monitoring
spec:
  rules:
  - host: sandbox-prometheus-federation.narrative.cloud
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
  tls:
  - secretName: cloudflare-wildcard-narrative-cloud
    hosts:
      - sandbox-prometheus-federation.narrative.cloud
