environments/sandbox-narrative/kubernetes/prometheus/prometheus/sandbox-prometheus-narrative-cloud-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start
    nginx.ingress.kubernetes.io/auth-url: http://oauth.default.svc.cluster.local:4180/oauth2/auth
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "monitoring"
  name: sandbox-prometheus
  namespace: monitoring
spec:
  rules:
  - host: sandbox-prometheus.narrative.cloud
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
  tls:
  - secretName: cloudflare-wildcard-narrative-cloud
    hosts:
      - sandbox-prometheus.narrative.cloud
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "monitoring"
  name: oauth-sandbox-prometheus
  namespace: default
spec:
  rules:
  - host: sandbox-prometheus.narrative.cloud
    http:
      paths:
      - backend:
          serviceName: oauth
          servicePort: 4180
        path: /oauth2
  tls:
  - secretName: cloudflare-wildcard-narrative-cloud
    hosts:
      - sandbox-prometheus.narrative.cloud
